# canvas-github-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  Update test_01_agent.py  agent_reasoning.py  api.py  canvas_tools.py  cli.py  example.py  github_tools.py  main.py  pyproject.toml  requirements.txt  templates.py  test_01_agent.py  test_agent.py
.github/workflows/: test.yml
app/: __init__.py  agent.py  agent_reasoning.py  auth_context.py  cli.py  credential_crypto.py  credentials.py  delegation_policy.py  mcp_server.py  planning.py  provenance.py  registry.py  remote_agents.py  task_store.py  user_store.py
docs/: agntcy-ioa-roadmap.md  linode-deploy.md
examples/: __init__.py  claude_desktop_config.template.json  example.py  smithery_execution_profile.template.json
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  index.css
metadata/agent-fact-cards/: agent.assignment-fetcher.fact-card.json  agent.repository-initializer.fact-card.json  service.canvas-assignment-workflow.fact-card.json  service.canvas-github-agent.fact-card.json
metadata/oasf-records/: service.canvas-assignment-workflow.record.json
scaffolding/: __init__.py  templates.py
scripts/linode/: bootstrap_canvas_agent.sh  canvas-github-agent-api.service.template  install_web_stack.sh  nginx-canvas-github-agent.conf  update_web_release.sh
tests/: __init__.py  test_01_agent.py  test_agent.py  test_api.py  test_course_context_tools.py  test_delegation_policy.py  test_mcp_server.py  test_registry.py  test_remote_agents.py  test_task_store.py
tools/: __init__.py  canvas_tools.py  course_context_tools.py  github_tools.py  notion_tools.py
