[project]
name = "canvas-github-agent"
version = "0.1.0"
description = "CrewAI agent that uses canvas-mcp to get assignments and github-mcp to initialize repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.1.0",
    "mcp>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
canvas-github-agent = "app.agent:run"
canvas-github-agent-cli = "app.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "examples", "scaffolding", "tests", "tools"]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
